<resources>
    <string name="app_name">KIMovies</string>
    <string name="create_movie">Create movie</string>
    <string name="display_movies">Display movies</string>
    <string name="display_favourite_movies">Display favourite movies</string>
    <string name="edit_movies">Edit movies</string>
    <string name="search_movie">Search movie</string>
    <string name="movie_ratigns">Movie ratigns</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="rate_numbers_only_1_10">Rate: numbers only 1-10</string>
    <string name="review_some_feedback">Review: some feedback</string>
    <string name="save">Save</string>
    <string name="button">Button</string>
    <string name="movies">Movies</string>
    <string name="back">Back</string>
    <string name="is_favourite">Is favourite</string>
    <string name="edit_movie">Edit movie</string>
    <string name="update">update</string>
    <string name="click_to_any_movie_to_add_remove_it_to_from_favourite_list">Click to any movie to add/remove it to/from favourite list</string>
    <string name="favourite_movies">Favourite movies</string>
</resources>