<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMovie">

    <EditText
        android:id="@+id/editMovieYearEditText"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginBottom="420dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editMovieTitleEditText"
        app:layout_constraintStart_toStartOf="@+id/editMovieTitleEditText"
        app:layout_constraintTop_toBottomOf="@+id/editMovieTitleEditText"
        app:layout_constraintVertical_bias="0.84" />

    <EditText
        android:id="@+id/editMovieReviewText"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginBottom="244dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/review_some_feedback"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editMovieRateText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMovieRateText"
        app:layout_constraintTop_toBottomOf="@+id/editMovieRateText"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/editMovieRateText"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginBottom="308dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rate_numbers_only_1_10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editMovieDirectorText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMovieDirectorText"
        app:layout_constraintTop_toBottomOf="@+id/editMovieDirectorText" />

    <TextView
        android:id="@+id/editMovieTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/editMovieTitleEditText"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/editMovieDirectorText"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginBottom="368dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/director"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editMovieYearEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMovieYearEditText"
        app:layout_constraintTop_toBottomOf="@+id/editMovieYearEditText"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/editMovieUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editMovieBackButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/editMovieCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="28dp"
        android:text="@string/is_favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMovieReviewText" />
</androidx.constraintlayout.widget.ConstraintLayout>