<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainCreateMovieButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:text="@string/create_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/mainDisplayMoviesButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:text="@string/display_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainCreateMovieButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mainCreateMovieButton"
        app:layout_constraintTop_toBottomOf="@+id/mainCreateMovieButton"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/mainFavouriteMoviesButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="@string/display_favourite_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainDisplayMoviesButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mainDisplayMoviesButton"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplayMoviesButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainDisplayMoviesToEditButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainFavouriteMoviesButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mainFavouriteMoviesButton"
        app:layout_constraintTop_toBottomOf="@+id/mainFavouriteMoviesButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainSearchMovieButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:text="@string/search_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainDisplayMoviesToEditButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mainDisplayMoviesToEditButton"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplayMoviesToEditButton"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/mainRatingsButton"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/movie_ratigns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainSearchMovieButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mainSearchMovieButton"
        app:layout_constraintTop_toBottomOf="@+id/mainSearchMovieButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>